# utils

./: .gitignore  Application.cpp  Application.h  ArgParser.cpp  ArgParser.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  ClassTools.h  Condition.cpp  Condition.h  Config.h.in  ConfigFile.cpp  ConfigFile.h  Constants.h  Exceptions.h  FileUtils.cpp  FileUtils.h  HttpStatusCodes.h  Logger.cpp  Logger.h  Makefile  Mutex.cpp  Mutex.h  NetServer.cpp  NetServer.h  NetServices.h  NetUtils.cpp  NetUtils.h  Process.cpp  Process.h  Regex.cpp  Regex.h  Serial.cpp  Serial.h  Shm.cpp  Shm.h  SimpleHttpClient.cpp  SimpleHttpClient.h  Socket.cpp  (+12 more)
.github/workflows/: cmake.yml
debian/: README  changelog  control  copyright
tests/: CMakeLists.txt  Config.h.in  SocketTest.cpp  SocketTest.h  StringTest.cpp  StringTest.h  TestArgParse.cpp  TestArgParse.h  TestCircularBuffer.cpp  TestCircularBuffer.h  TestClass.cpp  TestClass.h  TestConfigFile.cpp  TestConfigFile.h  TestConstants.cpp  TestConstants.h  TestFileUtils.cpp  TestFileUtils.h  TestLogger.cpp  TestLogger.h  TestNetServer.cpp  TestNetServer.h  TestNetUtils.cpp  TestNetUtils.h  TestProcess.cpp  TestProcess.h  TestRegex.cpp  TestRegex.h  TestShm.cpp  TestShm.h  TestSimpleHttpClient.cpp  TestSimpleHttpClient.h  TestStateMachine.cpp  TestStateMachine.h  TestThread.cpp  TestThread.h  TestTimer.cpp  TestTimer.h  TestUserGroups.cpp  TestUserGroups.h  (+3 more)
